--- a/Trabalho1.ipynb
+++ b/Trabalho1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0ckjLDkuO8FpXfgIsXDZi",
+      "authorship_tag": "ABX9TyO5cNUV7t0mV9kZHvE0Jy/S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,13 @@
       "cell_type": "markdown",
       "source": [
         "**Trabalho 1 - Analise de rotatividade de Clientes Bancários**<br>\n",
-        "Desenvolvido por José Vinicius e Vitor Faustino"
+        "**Desenvolvido por** José Vinicius e Vitor Faustino<Br>\n",
+        "\n",
+        "\n",
+        "*   Identicar os fatores que influenciam a saída dos clientes;\n",
+        "*   Comparar o perfil de clientes que saíram com os que permaneceram;\n",
+        "*   Desenvolver modelos preditivos de churn;\n",
+        "*   Trabalhar com variáveis categóricas e numéricas simultaneamente.\n"
       ],
       "metadata": {
         "id": "3Ht2iE_fBsNp"
