--- a/Trabalho1.ipynb
+++ b/Trabalho1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5cNUV7t0mV9kZHvE0Jy/S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +39,15 @@
       ],
       "metadata": {
         "id": "3Ht2iE_fBsNp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vitor"
+      ],
+      "metadata": {
+        "id": "NyRl7L02I1PB"
       }
     }
   ]
