--- a/Trabalho1.ipynb
+++ b/Trabalho1.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "authorship_tag": "ABX9TyN0vGR3bif82sL06SlFRjzV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,11 +44,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Vitor"
-      ],
+      "source": [],
       "metadata": {
-        "id": "NyRl7L02I1PB"
+        "id": "NP8kMhk-Jn9z"
       }
     }
   ]
