--- a/Trabalho1.ipynb
+++ b/Trabalho1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0vGR3bif82sL06SlFRjzV",
+      "authorship_tag": "ABX9TyN8Tu+6EQXBmlLEjnu+U0/T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,9 +44,11 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "**ETAPA 1** - Carregando a base de dados"
+      ],
       "metadata": {
-        "id": "NP8kMhk-Jn9z"
+        "id": "LEm_6pYKKL5K"
       }
     }
   ]
