--- a/Trabalho1.ipynb
+++ b/Trabalho1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8Tu+6EQXBmlLEjnu+U0/T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Jv9545/Trabalho1_AnaliseDados/blob/main/Trabalho1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vitao-bolado/Trabalho1_AnaliseDados/blob/main/Trabalho1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,6 +49,37 @@
       "metadata": {
         "id": "LEm_6pYKKL5K"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. Introdução\n",
+        "print(\"Python é uma linguagem de programação de alto nível, interpretada e de tipagem dinâmica.\")\n",
+        "\n",
+        "var_1 = 2.3456\n",
+        "var_2 = 12\n",
+        "\n",
+        "print(f\"Valor de var_1: {var_1:.2f} \\nValor de var_2: {var_2}\")"
+      ],
+      "metadata": {
+        "id": "oAOWDPOeLhem",
+        "outputId": "db6d1004-4f0b-44a1-ff49-27829c6a1642",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python é uma linguagem de programação de alto nível, interpretada e de tipagem dinâmica.\n",
+            "Valor de var_1: 2.35 \n",
+            "Valor de var_2: 12\n"
+          ]
+        }
+      ]
     }
   ]
 }
