--- a/Trabalho1.ipynb
+++ b/Trabalho1.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vitao-bolado/Trabalho1_AnaliseDados/blob/main/Trabalho1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Jv9545/Trabalho1_AnaliseDados/blob/main/Trabalho1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -44,7 +44,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**ETAPA 1** - Carregando a base de dados"
+        "**ETAPA 1** - Carregando bibliotecas e base de dados"
       ],
       "metadata": {
         "id": "LEm_6pYKKL5K"
@@ -53,17 +53,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1. Introdução\n",
-        "print(\"Python é uma linguagem de programação de alto nível, interpretada e de tipagem dinâmica.\")\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
         "\n",
-        "var_1 = 2.3456\n",
-        "var_2 = 12\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
         "\n",
-        "print(f\"Valor de var_1: {var_1:.2f} \\nValor de var_2: {var_2}\")"
+        "path = \"/content/drive/MyDrive\"\n",
+        "\n",
+        "df = pd.read_csv(path + '/06_rotatividade_clientes_bancários.csv', sep=',')\n",
+        "\n"
       ],
       "metadata": {
         "id": "oAOWDPOeLhem",
-        "outputId": "db6d1004-4f0b-44a1-ff49-27829c6a1642",
+        "outputId": "884767cc-a130-4177-8298-d7ebe5f90200",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -74,9 +79,37 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Python é uma linguagem de programação de alto nível, interpretada e de tipagem dinâmica.\n",
-            "Valor de var_1: 2.35 \n",
-            "Valor de var_2: 12\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ETAPA 2 - Descrição dos dados"
+      ],
+      "metadata": {
+        "id": "rElOoCHlHG6c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EUJa2AE_7-Bw",
+        "outputId": "7f6270b2-3e69-4ced-c46b-b0c28238c347",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
           ]
         }
       ]
