--- a/Trabalho1.ipynb
+++ b/Trabalho1.ipynb
@@ -1871,11 +1871,11 @@
         "print(\"RMSE (simples):\", rmse_simples)"
       ],
       "metadata": {
-        "id": "4Fq8gkajOMjo",
-        "outputId": "3aad3253-c989-437b-aa6c-bd09f3846d53",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4Fq8gkajOMjo",
+        "outputId": "3aad3253-c989-437b-aa6c-bd09f3846d53"
       },
       "execution_count": 24,
       "outputs": [
@@ -1926,11 +1926,11 @@
         "print(\"RMSE (múltiplo):\", rmse_multiplo)"
       ],
       "metadata": {
-        "id": "O_f023mbSLNE",
-        "outputId": "5479e66e-1fba-43a7-ad0b-4696cfb6ded3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "O_f023mbSLNE",
+        "outputId": "5479e66e-1fba-43a7-ad0b-4696cfb6ded3"
       },
       "execution_count": 26,
       "outputs": [
@@ -1947,9 +1947,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**ETAPA 10 - Conclusão**\n",
+        "**ETAPA 10 - Conclusão**\n",
         "\n",
-        "### Conclusões\n",
+        " Conclusões\n",
         "\n",
         "Com base na análise exploratória, estatística e preditiva dos dados da base de Rotatividade de Clientes Bancários, foi possível identificar padrões relevantes que ajudam a explicar a saída de clientes do banco:\n",
         "\n",
@@ -1960,7 +1960,7 @@
         "- A regressão linear múltipla obteve um desempenho melhor que a simples, embora a capacidade preditiva ainda seja limitada (valor de R² baixo), o que indica que outros fatores externos também podem influenciar a decisão de saída.\n",
         "\n",
         "\n",
-        "### Recomendações\n",
+        " Recomendações\n",
         "\n",
         "Com base nas conclusões acima, propomos as seguintes ações que o banco pode considerar para reduzir a rotatividade de clientes:\n",
         "\n",
