Incorporando teste Qui-Quadrado na Hipótese 1 - Etapa - 8.2.1

--- a/Trabalho1.ipynb
+++ b/Trabalho1.ipynb
@@ -4036,12 +4036,12 @@
         "df.drop(columns=['NumOfProducts_calc'], inplace=True)"
       ],
       "metadata": {
-        "id": "8v_DkGad2A3m",
-        "outputId": "0d4df5c7-68c8-4e31-aa07-40434626feb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        }
+        },
+        "id": "8v_DkGad2A3m",
+        "outputId": "0d4df5c7-68c8-4e31-aa07-40434626feb7"
       },
       "execution_count": 30,
       "outputs": [
@@ -4168,12 +4168,12 @@
       ],
       "metadata": {
         "id": "Cj-ztcdKlHbK",
-        "outputId": "f5338455-0aa4-4a9a-bb89-67a706b9e3a9",
+        "outputId": "5925fe95-a9d5-4a49-fce5-d9a25dddadb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -4181,6 +4181,68 @@
           "text": [
             "Valor-p: 9.159891405818244e-187\n",
             "Diferença estatisticamente significativa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Etapa 8.2.1 - Teste com Qui-Quadrado<br><br>Usamos o teste Qui-Quadrado de Independência pois é muito útil quando se quer descobrir se existe uma relação (ou associação) entre duas variáveis categóricas."
+      ],
+      "metadata": {
+        "id": "GnIATZd14Qzj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import chi2_contingency\n",
+        "\n",
+        "# Criando uma categoria '1 Produto' vs 'Mais de 1'\n",
+        "df['GrupoProdutos'] = df['NumOfProducts'].apply(lambda x: '1 Produto' if x == 1 else 'Mais de 1 Produto')\n",
+        "\n",
+        "# Tabela de contingência\n",
+        "tabela_contingencia_h1 = pd.crosstab(df['GrupoProdutos'], df['Exited'])\n",
+        "\n",
+        "print(\"Tabela de Contingência (Hipótese 1):\")\n",
+        "print(tabela_contingencia_h1)\n",
+        "\n",
+        "# Realizando o teste Qui-Quadrado\n",
+        "chi2, p, dof, expected = chi2_contingency(tabela_contingencia_h1)\n",
+        "\n",
+        "print(f\"\\nValor p do teste Qui-Quadrado: {p}\")\n",
+        "if p < 0.05:\n",
+        "    print(\"A um nível de significância de 5%, rejeitamos a hipótese nula.\")\n",
+        "    print(\"Existe uma associação estatisticamente significativa entre ter apenas 1 produto e a saída do cliente.\")\n",
+        "else:\n",
+        "    print(\"Não há evidências para rejeitar a hipótese nula.\")\n",
+        "\n",
+        "# Removendo a coluna auxiliar\n",
+        "df.drop(columns=['GrupoProdutos'], inplace=True)"
+      ],
+      "metadata": {
+        "id": "EvHwiplB4jSd",
+        "outputId": "69a3a5ae-71bf-4274-b5a5-9915969f3a32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tabela de Contingência (Hipótese 1):\n",
+            "Exited                0     1\n",
+            "GrupoProdutos                \n",
+            "1 Produto          3674  1409\n",
+            "Mais de 1 Produto  4286   629\n",
+            "\n",
+            "Valor p do teste Qui-Quadrado: 2.416586717641339e-76\n",
+            "A um nível de significância de 5%, rejeitamos a hipótese nula.\n",
+            "Existe uma associação estatisticamente significativa entre ter apenas 1 produto e a saída do cliente.\n"
           ]
         }
       ]
