Incorporando teste Qui-Quadrado na Hipótese 2 - Etapa - 8.2.1

--- a/Trabalho1.ipynb
+++ b/Trabalho1.ipynb
@@ -4188,10 +4188,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Etapa 8.2.1 - Teste com Qui-Quadrado<br><br>Usamos o teste Qui-Quadrado de Independência pois é muito útil quando se quer descobrir se existe uma relação (ou associação) entre duas variáveis categóricas."
+        "Etapa 8.2.1 - Testes com Qui-Quadrado<br><br>Usamos o teste Qui-Quadrado de Independência pois é muito útil quando se quer descobrir se existe uma relação (ou associação) entre duas variáveis categóricas."
       ],
       "metadata": {
         "id": "GnIATZd14Qzj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Teste da Hipótese 1"
+      ],
+      "metadata": {
+        "id": "7xmswhH4FOEA"
       }
     },
     {
@@ -4222,11 +4231,11 @@
         "df.drop(columns=['GrupoProdutos'], inplace=True)"
       ],
       "metadata": {
-        "id": "EvHwiplB4jSd",
-        "outputId": "69a3a5ae-71bf-4274-b5a5-9915969f3a32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EvHwiplB4jSd",
+        "outputId": "69a3a5ae-71bf-4274-b5a5-9915969f3a32"
       },
       "execution_count": 33,
       "outputs": [
@@ -4243,6 +4252,62 @@
             "Valor p do teste Qui-Quadrado: 2.416586717641339e-76\n",
             "A um nível de significância de 5%, rejeitamos a hipótese nula.\n",
             "Existe uma associação estatisticamente significativa entre ter apenas 1 produto e a saída do cliente.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Teste da Hipótese 2"
+      ],
+      "metadata": {
+        "id": "Pq311hcnFRwU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import chi2_contingency\n",
+        "\n",
+        "# Tabela de contingência\n",
+        "tabela_contingencia_h2 = pd.crosstab(df['IsActiveMember'], df['Exited'])\n",
+        "\n",
+        "print(\"Tabela de Contingência (Hipótese 2):\")\n",
+        "print(tabela_contingencia_h2)\n",
+        "\n",
+        "# Realizando o teste Qui-Quadrado\n",
+        "chi2, p, dof, expected = chi2_contingency(tabela_contingencia_h2)\n",
+        "\n",
+        "print(f\"\\nValor p do teste Qui-Quadrado: {p}\")\n",
+        "if p < 0.05:\n",
+        "    print(\"A um nível de significância de 5%, rejeitamos a hipótese nula.\")\n",
+        "    print(\"Existe uma associação estatisticamente significativa entre ser um membro ativo e a permanência no banco.\")\n",
+        "else:\n",
+        "    print(\"Não há evidências para rejeitar a hipótese nula.\")"
+      ],
+      "metadata": {
+        "id": "njhL2NXHFUM5",
+        "outputId": "f968f4bb-91da-48df-9c22-3a68c5d55a71",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tabela de Contingência (Hipótese 2):\n",
+            "Exited             0     1\n",
+            "IsActiveMember            \n",
+            "0.0             3548  1303\n",
+            "1.0             4412   735\n",
+            "\n",
+            "Valor p do teste Qui-Quadrado: 9.834879571957205e-55\n",
+            "A um nível de significância de 5%, rejeitamos a hipótese nula.\n",
+            "Existe uma associação estatisticamente significativa entre ser um membro ativo e a permanência no banco.\n"
           ]
         }
       ]
